--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,7 @@
     <h1>Options</h1>
     <div class="checkbox-container">
         <input type="checkbox" id="disable-transition" checked>
-        <label for="disable-transition">Disable transition</label>
+        <label for="disable-transition">Enable transition</label>
     </div>
 </body>
 
